# playwright-example

./: manage.py  pyproject.toml
app/: models.py
app/migrations/: 0001_initial.py
playwright_example/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_playwright_example.py
