[tool.poetry]
name = "playwright-example"
version = "0.1.0"
description = ""
authors = ["James Thorniley <james.thorniley@mixcloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"


[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-playwright = {path = "../playwright-pytest"}
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
